Change History
==============

1.7.7 unreleased
----------------

- use full name when getting a default to address
  of the form.
  [vangheem]

- add plone.belowcontenttitle viewlet
  [vangheem]

- Removed backwards compatibility. The 1.7 series requires Plone 4.1.
  [maurits]

- If an active action adapter is renamed, keep it active.
  [maurits]


1.7.6 2012-12-06
----------------

- 1.7.5 Accidentally reverted the "Do not explicitly set the MIME-Version" change
  from 1.7.3. Fixed. [smcmahon]

- Add field selection to save data adapter so that some fields can
  be ommitted if desired, like in the email adapter.
  [cguardia]


1.7.5 2012-11-30
----------------

- i18n support updated, added some missing strings, Italian translation updated
  [giacomos]

- Change some i18n strings not to have duplicates, regenerated po files and
  basque translation. [erral]

- 4.3 import compatability fix. [tomgross]

- Fix FileField compatibility with latest Archetypes [do3cc]


1.7.4 2012-11-04
----------------

- Add a browser view for encryption so that it may be used a bit
  more generally.
  [smcmahon]

- Clean up encryption error handling.
  [smcmahon]

1.7.3 2012-10-23
----------------

- Get encryption working with Python 2.6.
  [smcmahon]

- Do not explicitly set the MIME-Version as this would lead to a
  duplicate header, which can give problems with some mail servers.
  [maurits]


1.7.2 2012-08-16
----------------

- Make the dragging hook in the quickeditor order column show
  a move cursor.
  [smcmahon]

- quickedit.js had a case where "$" was used as an unguarded
  alias for jQuery. This interacted with a kss.core bug to kill
  all quickedit js functionality on IE 8. Fixed.
  [smcmahon]

- Fix selectors to work with latest jquery
  [vangheem]


1.7.1 2012-02-13
----------------

- Fix override disabling of fields with vocabularies.

- Fix issue #20: "email validation text is wrong," which would also
  affect several other error strings. Thanks, sunew!
